tests/ui/limits/huge-array-simple-32.stderr
error: values of the type `[u8; 2147516416]` are too big for the target architecture
  --> $DIR/huge-array-simple-32.rs:7:9
   |
LL |     let _fat: [u8; (1<<31)+(1<<15)] =
   |         ^^^^

error: aborting due to 1 previous error

